Create TerraMonic Minecraft Fabric Launcher with modern JavaFX UI
Co-authored-by: aethrius73 <aethrius73@gmail.com>